# CodingQuestionsCpp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/pp/codingquestionscpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  solutions.cpp  solutions.h
app/src/main/java/pp/codingquestionscpp/: JniCall.kt  MainActivity.kt
app/src/main/java/pp/codingquestionscpp/data/: QuestionRepository.kt
app/src/main/java/pp/codingquestionscpp/model/: Question.kt
app/src/main/java/pp/codingquestionscpp/question_list/: QuestionsUiState.kt  QuestionsViewModel.kt  UiEvent.kt
app/src/main/java/pp/codingquestionscpp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/pp/codingquestionscpp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
